Export code feature implemented

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,9 @@
     "@codesandbox/sandpack-react": "2.0.22",
     "@codesandbox/sandpack-themes": "^2.0.21",
     "axios": "^1.11.0",
+    "file-save": "^0.2.0",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "prism-react-renderer": "^2.4.1",
     "prismjs": "^1.30.0",
     "react": "^18.3.1",
